log
vi., 13 de may. de 2022 16:45:06: 
 sudoku.c | 21 ++++++++++++++++++++-
 1 file changed, 20 insertions(+), 1 deletion(-)
In file included from test.c:5:0:
sudoku.c: In function 'get_adj_nodes':
sudoku.c:67:27: error: passing argument 2 of 'pushBack' makes pointer from integer without a cast [-Werror=int-conversion]
             pushBack(list,numeroColocar);
                           ^~~~~~~~~~~~~
In file included from test.c:4:0:
list.h:23:6: note: expected 'void *' but argument is of type 'int'
 void pushBack(List* list, void* data);
      ^~~~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
dc31009
vi., 13 de may. de 2022 16:45:29: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|4
total_score: 15/70
0a89df1
vi., 13 de may. de 2022 16:49:59: 
 sudoku.c | 17 +++++++++++++++--
 1 file changed, 15 insertions(+), 2 deletions(-)
 tests:  3|4
total_score: 20/70
2a4c939
vi., 13 de may. de 2022 16:50:18: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|4
total_score: 15/70
de0ee22
vi., 13 de may. de 2022 16:50:38: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  3|4
total_score: 20/70
7068117
vi., 13 de may. de 2022 16:57:51: 
 sudoku.c | 19 +++++++++++++++++++
 1 file changed, 19 insertions(+)
 tests:  2|4
total_score: 15/70
e1e006b
vi., 13 de may. de 2022 17:00:02: 
 sudoku.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  2|4
total_score: 15/70
b215d60
vi., 13 de may. de 2022 17:01:32: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|4
total_score: 15/70
6ca0bf5
vi., 13 de may. de 2022 17:03:06: 
 sudoku.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  3|4
total_score: 20/70
b9c25f4
vi., 13 de may. de 2022 17:11:08: 
 sudoku.c | 16 ++++++++++++++--
 1 file changed, 14 insertions(+), 2 deletions(-)
In file included from test.c:5:0:
sudoku.c: In function 'is_valid':
sudoku.c:73:9: error: suggest parentheses around assignment used as truth value [-Werror=parentheses]
         if(comprobar[aux] = 1)
         ^~
cc1.exe: all warnings being treated as errors
Compilation failed
249b387
vi., 13 de may. de 2022 17:11:19: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|4
total_score: 15/70
34a9e49
vi., 13 de may. de 2022 17:17:33: 
 sudoku.c | 7 ++++---
 1 file changed, 4 insertions(+), 3 deletions(-)
 tests:  3|4
total_score: 20/70
ecfa315
vi., 13 de may. de 2022 17:21:16: 
 sudoku.c | 14 ++++++++------
 1 file changed, 8 insertions(+), 6 deletions(-)
 tests:  3|4
total_score: 20/70
899bb94
vi., 13 de may. de 2022 17:21:52: 
 sudoku.c | 17 +----------------
 1 file changed, 1 insertion(+), 16 deletions(-)
 tests:  3|4
total_score: 20/70
e49c4d3
vi., 13 de may. de 2022 17:31:06: 
 sudoku.c | 28 +++++++++++++++++++++++++++-
 1 file changed, 27 insertions(+), 1 deletion(-)
In file included from test.c:5:0:
sudoku.c: In function 'is_valid':
sudoku.c:67:52: error: 'n' is a pointer; did you mean to use '->'?
       if(comprobarColumnas[n->sudo[i][j]] == 0 && n.sudo[i][j] != 0)
                                                    ^
                                                    ->
Compilation failed
0ff189f
vi., 13 de may. de 2022 17:31:21: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|4
total_score: 15/70
a067182
